--- a/.github/workflows/provider_build.yml
+++ b/.github/workflows/provider_build.yml
@@ -7,6 +7,7 @@ on:
   push:
   pull_request:
   workflow_dispatch:
+  repository_dispatch:
 
 env:
   PACTBROKER_PACT_URI: https://chandramuddam.pactflow.io/
